[package]
name = "yestyle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "grg"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.57"
chrono = "0.4.19"
reqwest = "0.11.10"
rss = "2.0.1"
serde = "1.0.137"
serde_derive = "1.0.137"
tinytemplate = "1.2.1"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
